# s2geometry

./: CMakeLists.txt
doc/examples/: CMakeLists.txt  create_s2shape_index.cc  encode_s2shape_index.cc  load_and_query_s2cell_index.cc  load_s2cell_index.cc  load_s2shape_index_from_java.cc  s2cell_index_performance_test.cc  s2cell_index_utils.cc  s2cell_index_utils.h  s2shape_index_poc.cc
src/s2/: s2error_test.cc  s2loop_test.cc  s2polygon.h  s2polygon_test.cc  s2shape.h  s2shapeutil_coding.cc
